fixed color, margins don't work on scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -63,21 +63,18 @@ body.loading .loadingModal {
 {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
     border-radius: 10px;
-    background-color: #D8D8D8;
-    margin-left: 0.5%;
+    background-color: #F5F5F5;
 }
 .scrollbarStyle::-webkit-scrollbar
 {
     width: 12px;
-    background-color: #D8D8D8;
-    margin-left: 0.5%;
+    background-color: #C8C8C8;
 }
 .scrollbarStyle::-webkit-scrollbar-thumb
 {
     border-radius: 10px;
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
     background-color: #555;
-    margin-left: 0.5%;
 }
 #title {
     position: absolute;
